--- a/stylesheet.css
+++ b/stylesheet.css
@@ -121,6 +121,13 @@ Modules
   border-color: white;
   text-decoration: none;
 }
+
+.header-primary{
+  background: #9B8579;
+  text-align: center;
+  padding-top: 18px;
+  padding-bottom: 18px;
+}
 /***************************
 ****************************
 Theme Styles
