--- a/stylesheet.css
+++ b/stylesheet.css
@@ -178,6 +178,16 @@ Modules
     margin-top: 35px;
 }
 
+.hero {
+    text-align: center;
+}
+
+.hero-primary {
+    background-color: #594a42;
+    color: white;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
 
 /***************************
 ****************************
