fine tuned hero

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -189,6 +189,23 @@ Modules
     padding-bottom: 25px;
 }
 
+.hero-title {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    font-size: 2.625em;
+}
+
+.hero-subtitle {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    font-size: 1.500em;
+    font-weight: normal;
+}
+
+.hero-subtitle + button {
+    margin-top: 25px;
+}
+
 /***************************
 ****************************
 Theme Styles
