finsihed background img chapter

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -189,6 +189,14 @@ Modules
     padding-bottom: 25px;
 }
 
+.hero-primary.bg-image>img {
+    opacity: 0.55;
+}
+
+.hero-body {
+    position: relative;
+}
+
 .hero-title {
     margin-top: 25px;
     margin-bottom: 25px;
@@ -202,9 +210,26 @@ Modules
     font-weight: normal;
 }
 
-.hero-subtitle + button {
+.hero-subtitle+button {
     margin-top: 25px;
 }
+
+.bg-image {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+.bg-image>img {
+    position: absolute;
+    top: -9999px;
+    bottom: -9999px;
+    left: -9999px;
+    right: -9999px;
+    margin: auto;
+    min-width: 100%;
+}
+
 
 /***************************
 ****************************
